http-ingress-nginx/kustomize/ingress-nginx/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: hello-world-ingress
  spec:
    ingressClassName: nginx
    rules:
      - host: example.com
        http:
          paths:
            - path: /hello
              pathType: Prefix
              backend:
                service:
                  name: http-server
                  port:
                    number: 9091
